data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1898.wast
;; 9. **Backward Branch Stack Reconciliation**:    - **Description**: Use `br_if` to conditionally loop back expecting `f32` inputs but with an `i32` stack state.    - **Constraint**: Tests correct stack unwinding and type reconciliation for backward branches.    - **Differential Behavior**: WASM will identify the type error, wizard_engine may fail to adjust stack references properly.

(assert_invalid
  (module
    (func $backward-branch-stack-reconciliation
      (loop (param f32) (result f32)
        (block (br_if 1 (i32.const 1)))
        (f32.const 2.0)
      )
    )
  )
  "type mismatch"
)